--- a/recursos/css/estilo.css
+++ b/recursos/css/estilo.css
@@ -2,6 +2,13 @@
 	margin: 0;
 	padding: 0;
 }
+body{
+
+	background-image:url("https://images7.alphacoders.com/662/662102.png");
+	background-size: cover;
+	height: 100%;
+
+}
 .buscador{
 	width: 100%;
 	height: 75px;
@@ -166,6 +173,10 @@
 	text-align: center;
 	border:solid 1px #CB4335;
 	border-radius: 12px;
+	background: #CB4335;
+	background-image: url("https://cdn.icon-icons.com/icons2/851/PNG/512/Pokedex_tool_icon-icons.com_67529.png");
+	background-size: 100% 100%;
+
 }
 
 .box1{
@@ -194,6 +205,18 @@ background: #CB4335;
 border:solid 1px #BFC9CA;
 color: white;
 border-radius: 12px;
+
+}
+.btnvolver{
+	width: 60px;
+	height: 25px;
+	float: right;
+	background: #CB4335;
+	border:solid 1px #BFC9CA;
+	color: white;
+	border-radius: 12px;
+	text-decoration: none;
+	line-height: unset;
 }
 
 .inputform{
